@@ -1,3 +1,8 @@
+2012-11-20  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c:  Truncate requested column number to maximum sane
+	value. This prevents a segfault on "plot $foo using 1 title column(999)"
+
 2012-11-17  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/plot2d.c (plotrequest):  Fix bug introduced by 2012-11-12 patch
